--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  <title>首页</title>
+  <title>帝少导航站</title>
   <style>
     /* 全局样式 */
     body {
